# pytorch_lns

./: .gitignore  README.md  __init__.py  requirements.txt  setup.py  try.py
examples/: benchmark.py  mnist_example.py
lns_autograd/: __init__.py  functions.py
lns_nn/: __init__.py  conv.py  linear.py
lns_ops/: __init__.py  activation_funcs.py  basic_ops.py  loss_funcs.py  matrix_ops.py
pytorch_lns/: __init__.py
pytorch_lns/lns_autograd/: __init__.py  functions.py
pytorch_lns/lns_nn/: __init__.py  conv.py  linear.py  pyproject.toml
pytorch_lns/lns_ops/: __init__.py  activation_funcs.py  basic_ops.py  loss_funcs.py  matrix_ops.py
pytorch_lns/lns_tensor/: __init__.py  lns_tensor.py
tests/: test_lns_tensor.py
