[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytorch-lns"
version = "0.1.0"
description = "Logarithmic Number System (LNS) implementation for PyTorch"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "AbhiRam", email = "your.email@example.com" },
]
keywords = ["pytorch", "lns", "logarithmic-number-system", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.22.0",
    "matplotlib>=3.5.0",
    "tabulate>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pytorch_lns"]